v. 0.1 - add countries and small changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,18 +24,10 @@ var ibanValid = true;
         </div>
         <div class="container">
             <div class="container-header">
-                <h1>Bank Details</h1>
+                <h1>Account Details</h1>
             </div>
             <div class="container-body">
                 <table>
-                    <tr>
-                        <td>Country Name</td>
-                        <td class="bold" id="countryName"></td>
-                    </tr>
-                    <tr>
-                        <td>Country Code</td>
-                        <td class="bold" id="countryCode"></td>
-                    </tr>
                     <tr>
                         <td>Check Sum Digits</td>
                         <td class="bold" id="checkSumDigits"></td>
@@ -53,13 +45,52 @@ var ibanValid = true;
                         <td class="bold" id="accountNumber"></td>
                     </tr>
                     <tr>
+                        <td>Identification Number</td>
+                        <td class="bold" id="identificationNumber"></td>
+                    </tr>
+                    <tr>
                         <td>National Code</td>
                         <td class="bold" id="nationalCode"></td>
+                    </tr>
+                    <tr>
+                        <td>Account Type</td>
+                        <td class="bold" id="accountType"></td>
+                    </tr>
+                    <tr>
+                        <td>Owner Type</td>
+                        <td class="bold" id="ownerType"></td>
+                    </tr>
+                    <tr>
+                        <td>Reserved Character</td>
+                        <td class="bold" id="reservedCharacter"></td>
                     </tr>
                 </table>
             </div>
         </div>
         <div class="container">
+            <div class="container-header">
+                <h1>Bank Details</h1>
+            </div>
+            <div class="container-body">
+                <table>
+                    <tr>
+                        <td>Country Name</td>
+                        <td class="bold" id="countryName"></td>
+                    </tr>
+                    <tr>
+                        <td>Country Code</td>
+                        <td class="bold" id="countryCode"></td>
+                    </tr>
+                    <tr>
+                        <td>Bank Name</td>
+                        <td class="bold" id="bankName"></td>
+                    </tr>
+                    <tr>
+                        <td>Supports SEPA</td>
+                        <td class="bold" id="supportsSEPA"></td>
+                    </tr>
+                </table>
+            </div>
             <div class="container-header">
                 <h1>Verification</h1>
             </div>
