--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,6 +41,10 @@ var ibanValid = true;
                         <td class="bold" id="branchCode"></td>
                     </tr>
                     <tr>
+                        <td>Sort Code</td>
+                        <td class="bold" id="sortCode"></td>
+                    </tr>
+                    <tr>
                         <td>Account Number</td>
                         <td class="bold" id="accountNumber"></td>
                     </tr>
